[gd_scene load_steps=12 format=3 uid="uid://blb60kopg8ye8"]

[ext_resource type="Script" path="res://GameController.gd" id="1_p52nx"]
[ext_resource type="Script" path="res://Board.gd" id="3_hl88j"]
[ext_resource type="PackedScene" uid="uid://b82v2l7odaygd" path="res://tile.tscn" id="4_kxw2k"]
[ext_resource type="PackedScene" uid="uid://ed6t1xygsgca" path="res://PieceBig.tscn" id="5_medgg"]
[ext_resource type="PackedScene" uid="uid://cqqr1dhi5si2y" path="res://PieceMedium.tscn" id="6_06iuy"]
[ext_resource type="PackedScene" uid="uid://cw3uwvcp8qyfv" path="res://PieceSmall.tscn" id="7_mpoqq"]
[ext_resource type="Script" path="res://LabelsControl.gd" id="8_r0fwp"]
[ext_resource type="Script" path="res://GameOverLabel.gd" id="9_3akw5"]
[ext_resource type="Texture2D" uid="uid://b16wc5s2rwyhl" path="res://Assets/Sprites/PieceBig.png" id="10_egmfa"]
[ext_resource type="Texture2D" uid="uid://jlpq23ju5ar6" path="res://Assets/Sprites/PieceMedium.png" id="11_bjcqa"]
[ext_resource type="Texture2D" uid="uid://bcjl1tyadbqxc" path="res://Assets/Sprites/PieceSmall.png" id="12_5xsdq"]

[node name="Main2D" type="Node"]

[node name="GameController" type="Node" parent="."]
script = ExtResource("1_p52nx")

[node name="Board" type="Node" parent="."]
script = ExtResource("3_hl88j")

[node name="Tile" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 548)
scale = Vector2(2, 2)
metadata/TileCoordX = 7

[node name="Tile2" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 548)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium")
metadata/TileCoordX = 7
metadata/TileCoordY = 1

[node name="Tile3" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 548)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig")
metadata/TileCoordX = 7
metadata/TileCoordY = 2

[node name="Tile4" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 548)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig2")
metadata/TileCoordX = 7
metadata/TileCoordY = 3

[node name="Tile5" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 484)
scale = Vector2(2, 2)
metadata/TileCoordX = 6

[node name="Tile6" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 484)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall")
metadata/TileCoordX = 6
metadata/TileCoordY = 1

[node name="Tile7" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 484)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium2")
metadata/TileCoordX = 6
metadata/TileCoordY = 2

[node name="Tile8" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 484)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig3")
metadata/TileCoordX = 6
metadata/TileCoordY = 3

[node name="Tile9" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 420)
scale = Vector2(2, 2)
metadata/TileCoordX = 5

[node name="Tile10" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 420)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall2")
metadata/TileCoordX = 5
metadata/TileCoordY = 1

[node name="Tile11" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 420)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall3")
metadata/TileCoordX = 5
metadata/TileCoordY = 2

[node name="Tile12" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 420)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium3")
metadata/TileCoordX = 5
metadata/TileCoordY = 3

[node name="Tile13" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 356)
scale = Vector2(2, 2)
metadata/TileCoordX = 4

[node name="Tile14" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 356)
scale = Vector2(2, 2)
metadata/TileCoordX = 4
metadata/TileCoordY = 1

[node name="Tile15" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 356)
scale = Vector2(2, 2)
metadata/TileCoordX = 4
metadata/TileCoordY = 2

[node name="Tile16" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 356)
scale = Vector2(2, 2)
metadata/TileCoordX = 4
metadata/TileCoordY = 3

[node name="Tile17" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 288)
scale = Vector2(2, 2)
metadata/TileCoordX = 3

[node name="Tile18" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 288)
scale = Vector2(2, 2)
metadata/TileCoordX = 3
metadata/TileCoordY = 1

[node name="Tile19" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 288)
scale = Vector2(2, 2)
metadata/TileCoordX = 3
metadata/TileCoordY = 2

[node name="Tile20" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 288)
scale = Vector2(2, 2)
metadata/TileCoordX = 3
metadata/TileCoordY = 3

[node name="Tile21" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 224)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium4")
metadata/TileCoordX = 2

[node name="Tile22" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 224)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall5")
metadata/TileCoordX = 2
metadata/TileCoordY = 1

[node name="Tile23" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 224)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall4")
metadata/TileCoordX = 2
metadata/TileCoordY = 2

[node name="Tile24" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 224)
scale = Vector2(2, 2)
metadata/TileCoordX = 2
metadata/TileCoordY = 3

[node name="Tile25" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 160)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig4")
metadata/TileCoordX = 1

[node name="Tile26" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 160)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium5")
metadata/TileCoordX = 1
metadata/TileCoordY = 1

[node name="Tile27" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 160)
scale = Vector2(2, 2)
piece = NodePath("../../PieceSmall6")
metadata/TileCoordX = 1
metadata/TileCoordY = 2

[node name="Tile28" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 160)
scale = Vector2(2, 2)
metadata/TileCoordX = 1
metadata/TileCoordY = 3

[node name="Tile29" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(212, 96)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig6")

[node name="Tile30" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(276, 96)
scale = Vector2(2, 2)
piece = NodePath("../../PieceBig5")
metadata/TileCoordY = 1

[node name="Tile31" parent="Board" node_paths=PackedStringArray("piece") groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(340, 96)
scale = Vector2(2, 2)
piece = NodePath("../../PieceMedium6")
metadata/TileCoordY = 2

[node name="Tile32" parent="Board" groups=["tiles"] instance=ExtResource("4_kxw2k")]
position = Vector2(404, 96)
scale = Vector2(2, 2)
metadata/TileCoordY = 3

[node name="PieceBig" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(340, 548)
scale = Vector2(2, 2)
starting_tile_x = 7
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile3")

[node name="PieceBig2" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(404, 548)
scale = Vector2(2, 2)
starting_tile_x = 7
starting_tile_y = 3
starting_tile_ref = NodePath("../Board/Tile4")

[node name="PieceBig3" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(404, 484)
scale = Vector2(2, 2)
starting_tile_x = 6
starting_tile_y = 3
starting_tile_ref = NodePath("../Board/Tile8")

[node name="PieceMedium" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(276, 548)
scale = Vector2(2, 2)
starting_tile_x = 7
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile2")

[node name="PieceMedium2" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(340, 484)
scale = Vector2(2, 2)
starting_tile_x = 6
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile7")

[node name="PieceMedium3" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(404, 420)
scale = Vector2(2, 2)
starting_tile_x = 5
starting_tile_y = 3
starting_tile_ref = NodePath("../Board/Tile12")

[node name="PieceSmall" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(276, 484)
scale = Vector2(2, 2)
starting_tile_x = 6
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile6")

[node name="PieceSmall2" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(276, 420)
scale = Vector2(2, 2)
starting_tile_x = 5
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile10")

[node name="PieceSmall3" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(340, 420)
scale = Vector2(2, 2)
starting_tile_x = 5
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile11")

[node name="PieceBig4" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(212, 160)
scale = Vector2(2, 2)
starting_tile_x = 1
starting_tile_ref = NodePath("../Board/Tile25")

[node name="PieceBig5" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(276, 96)
scale = Vector2(2, 2)
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile30")

[node name="PieceBig6" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("5_medgg")]
z_index = 1
position = Vector2(212, 96)
scale = Vector2(2, 2)
starting_tile_ref = NodePath("../Board/Tile29")

[node name="PieceMedium4" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(212, 224)
scale = Vector2(2, 2)
starting_tile_x = 2
starting_tile_ref = NodePath("../Board/Tile21")

[node name="PieceMedium5" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(276, 160)
scale = Vector2(2, 2)
starting_tile_x = 1
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile26")

[node name="PieceMedium6" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("6_06iuy")]
z_index = 1
position = Vector2(340, 96)
scale = Vector2(2, 2)
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile31")

[node name="PieceSmall4" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(340, 224)
scale = Vector2(2, 2)
starting_tile_x = 2
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile23")

[node name="PieceSmall5" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(276, 224)
scale = Vector2(2, 2)
starting_tile_x = 2
starting_tile_y = 1
starting_tile_ref = NodePath("../Board/Tile22")

[node name="PieceSmall6" parent="." node_paths=PackedStringArray("starting_tile_ref") instance=ExtResource("7_mpoqq")]
position = Vector2(340, 160)
scale = Vector2(2, 2)
starting_tile_x = 1
starting_tile_y = 2
starting_tile_ref = NodePath("../Board/Tile27")

[node name="LabelsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_r0fwp")

[node name="Label" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 481.0
offset_top = 545.0
offset_right = 598.0
offset_bottom = 571.0
text = "Player 1 Score: "

[node name="Player1Score" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 606.0
offset_top = 544.0
offset_right = 696.0
offset_bottom = 579.0
text = "0"

[node name="Label2" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 475.0
offset_top = 71.0
offset_right = 592.0
offset_bottom = 97.0
text = "Player 2 Score: "

[node name="Player2Score" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 598.0
offset_top = 71.0
offset_right = 697.0
offset_bottom = 97.0
text = "0"

[node name="GameOverLabel" type="Label" parent="LabelsControl"]
visible = false
layout_mode = 0
offset_left = 555.0
offset_top = 313.0
offset_right = 672.0
offset_bottom = 339.0
text = "GAME OVER"
script = ExtResource("9_3akw5")

[node name="P1CapturedBig" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 520)
texture = ExtResource("10_egmfa")

[node name="P1CapturedMedium" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 480)
texture = ExtResource("11_bjcqa")

[node name="P1CapturedSmall" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 440)
texture = ExtResource("12_5xsdq")

[node name="P2CapturedBig" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 120)
texture = ExtResource("10_egmfa")

[node name="P2CapturedMedium" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 160)
texture = ExtResource("11_bjcqa")

[node name="P2CapturedSmall" type="Sprite2D" parent="LabelsControl"]
position = Vector2(500, 200)
texture = ExtResource("12_5xsdq")

[node name="P1CapturedBigLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 510.0
offset_right = 664.0
offset_bottom = 536.0
text = "x 0
"

[node name="P1CapturedMediumLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 470.0
offset_right = 664.0
offset_bottom = 496.0
text = "x 0
"

[node name="P1CapturedSmallLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 432.0
offset_right = 664.0
offset_bottom = 458.0
text = "x 0
"

[node name="P2CapturedBigLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 110.0
offset_right = 664.0
offset_bottom = 136.0
text = "x 0
"

[node name="P2CapturedMediumLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 150.0
offset_right = 664.0
offset_bottom = 176.0
text = "x 0
"

[node name="P2CapturedSmallLabel" type="Label" parent="LabelsControl"]
layout_mode = 0
offset_left = 520.0
offset_top = 193.0
offset_right = 664.0
offset_bottom = 219.0
text = "x 0
"

[connection signal="game_ended" from="Board" to="LabelsControl/GameOverLabel" method="_on_board_game_ended"]
[connection signal="score_changed" from="Board" to="LabelsControl" method="_on_score_changed"]
